<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.name.hohoanghai.h3kfc.LoginActivity">

    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:id="@+id/txtUp"
        android:textColor="#ffffff" />

    <ScrollView
        android:layout_below="@+id/txtUp"
        android:layout_above="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="35dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:id="@+id/txtSigninEmail"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#A5FFFFFF" />

            <EditText
                android:id="@+id/txtSigninPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#a5ffffff" />

            <Button
                android:background="@drawable/blur_button"
                android:id="@+id/btnSignin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:id="@+id/btnSignup"
        android:layout_alignParentBottom="true"
        android:background="#28FFFFFF"
        android:textColor="#ffffff" />

</RelativeLayout>