<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="vn.name.hohoanghai.fragment.SettingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <RadioGroup
            android:id="@+id/rbgLanguage"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:drawableLeft="@drawable/ic_vi"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vietnamese"
                android:id="@+id/rbVietnamese"
                android:checked="true" />

            <RadioButton
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_us"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:id="@+id/rbEnglish" />
        </RadioGroup>
    </LinearLayout>
</FrameLayout>
